// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput renders correctly 1`] = `
<div
  className="sc-bxivhb iKYOHs"
>
  <label
    className="sc-bdVaJa etThJd"
    htmlFor="test"
  >
    Test
     
  </label>
  <input
    className="sc-ifAKCX imHOfK"
    id="test"
    name="test"
    onChange={[Function]}
    placeholder=""
    type="text"
    value={undefined}
  />
</div>
`;

exports[`TextInput renders correctly when passed an error prop 1`] = `
<div
  className="sc-bxivhb iKYOHs"
>
  <label
    className="sc-bdVaJa etThJd"
    htmlFor="test"
  >
    Test
     
    <span
      className="sc-bwzfXH dfGNqQ"
      title="Required field"
    />
  </label>
  <input
    className="sc-ifAKCX eWmInO"
    id="test"
    name="test"
    onChange={[Function]}
    placeholder=""
    type="text"
    value={undefined}
  />
  <div
    className="sc-htpNat chuRVz"
  >
    This is a required field
  </div>
</div>
`;

exports[`TextInput renders correctly when passed required prop 1`] = `
<div
  className="sc-bxivhb iKYOHs"
>
  <label
    className="sc-bdVaJa etThJd"
    htmlFor="test"
  >
    Test
     
    <span
      className="sc-bwzfXH dfGNqQ"
      title="Required field"
    />
  </label>
  <input
    className="sc-ifAKCX imHOfK"
    id="test"
    name="test"
    onChange={[Function]}
    placeholder=""
    type="text"
    value={undefined}
  />
</div>
`;

exports[`TextInput renders correctly when passed type of email 1`] = `
<div
  className="sc-bxivhb iKYOHs"
>
  <label
    className="sc-bdVaJa etThJd"
    htmlFor="test"
  >
    Test
     
  </label>
  <input
    className="sc-ifAKCX imHOfK"
    id="test"
    name="test"
    onChange={[Function]}
    placeholder=""
    type="email"
    value={undefined}
  />
</div>
`;

exports[`TextInput renders correctly when passed type of number 1`] = `
<div
  className="sc-bxivhb iKYOHs"
>
  <label
    className="sc-bdVaJa etThJd"
    htmlFor="test"
  >
    Test
     
  </label>
  <input
    className="sc-ifAKCX imHOfK"
    id="test"
    name="test"
    onChange={[Function]}
    placeholder=""
    type="number"
    value={undefined}
  />
</div>
`;

exports[`TextInput renders correctly when passed type of password 1`] = `
<div
  className="sc-bxivhb iKYOHs"
>
  <label
    className="sc-bdVaJa etThJd"
    htmlFor="test"
  >
    Test
     
  </label>
  <input
    className="sc-ifAKCX imHOfK"
    id="test"
    name="test"
    onChange={[Function]}
    placeholder=""
    type="password"
    value={undefined}
  />
</div>
`;

exports[`TextInput renders correctly when passed type of tel 1`] = `
<div
  className="sc-bxivhb iKYOHs"
>
  <label
    className="sc-bdVaJa etThJd"
    htmlFor="test"
  >
    Test
     
  </label>
  <input
    className="sc-ifAKCX imHOfK"
    id="test"
    name="test"
    onChange={[Function]}
    placeholder=""
    type="tel"
    value={undefined}
  />
</div>
`;
